# yolov8-openvino-inference

./: .gitignore  LICENSE
yolov8-pose-openvino-cpp/: ._.idea  ._CMakeLists.txt  ._cmake-build-debug  ._detect.cpp  ._detectVideo.cpp  ._model  ._testSource  ._yolov8.cpp  ._yolov8.h  CMakeLists.txt  detect.cpp  detectVideo.cpp  howUseOpenvino.md  yolov8.cpp  yolov8.h
yolov8-pose-openvino-cpp-rm/: CMakeLists.txt
yolov8-pose-openvino-cpp-rm/include/: Neural_Armor_Detection.h
yolov8-pose-openvino-cpp-rm/model/SOTA2-highBoxLoss/best_openvino_model_fp16/: best.xml  metadata.yaml
yolov8-pose-openvino-cpp-rm/model/SOTA2-highBoxLoss/best_openvino_model_fp32/: best.xml  metadata.yaml
yolov8-pose-openvino-cpp-rm/model/SOTA2-highBoxLoss/best_openvino_model_int8/: best.xml  metadata.yaml
yolov8-pose-openvino-cpp-rm/src/: Neural_Armor_Detection.cpp  mainTest.cpp
yolov8-pose-openvino-cpp/model/: ._epz165_fp32_SOTA
yolov8-pose-openvino-py/: armor_pose_code.py
